site changed via Kris

--- a/footer.html
+++ b/footer.html
@@ -14,6 +14,10 @@
       <div class="sub" ui-sref="gear">Gear</div>
     </div>
   </div>
+  <div class="contact-info">
+    <div>327 18th Place NE, Washington, DC 20002 <span>&#8212; 202-621-9453</span></div>
+    <div>202-621-9453</div>
+  </div>
   <div class="contain">
     <div>&copy; 2016 Ontel, LLC</div>
   </div>
