--- a/nav.html
+++ b/nav.html
@@ -21,9 +21,9 @@
   </div>
   <div class="subnav">
     <div ui-sref="swift" class="swift"><span>Swift Projects</span></div>
-    <div ui-sref="testing" class="testing"><span>Testing</span></div>
-    <div ui-sref="closeout" class="closeout"><span>Closeout</span></div>
-    <div ui-sref="gear" class="gear"><span>Gear</span></div>
+    <!--<div ui-sref="testing" class="testing"><span>Testing</span></div>-->
+    <div ui-sref="closeout" class="closeout"><span>Close Out</span></div>
+    <!--<div ui-sref="gear" class="gear"><span>Gear</span></div>-->
     <div ui-sref="management" class="mgmt"><span>MGMT</span></div>
     <div ui-sref="pricing" class="mobile-only">Pricing</div>
     <div ui-sref="about" class="mobile-only">About Us</div>
