--- a/footer.html
+++ b/footer.html
@@ -15,8 +15,8 @@
     </div>
   </div>
   <div class="contact-info">
-    <div>327 18th Place NE, Washington, DC 20002 <span>&#8212; 202-621-9453</span></div>
-    <div>202-621-9453</div>
+    <div>327 18th Place NE., Washington, D.C. 20002 <span>&#8212;(202) 930-1434</span></div>
+    <div>(202) 930-1434</div>
   </div>
   <div class="contain">
     <div>&copy; 2016 Ontel, LLC</div>
