--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
     </div>
     <div>
       <div class="sub" ui-sref="swift">Swift Projects</div
-      <div class="sub" ui-sref="close out">close out</div>
+      <div class="sub" ui-sref="close out">Close Out</div>
       <div class="sub" ui-sref="management">Management</div>
     </div>
   </div>
