missing closing tag in footer

--- a/footer.html
+++ b/footer.html
@@ -7,7 +7,7 @@
       <div ui-sref="jobs">Jobs</div>
     </div>
     <div>
-      <div class="sub" ui-sref="swift">Swift Projects</div
+      <div class="sub" ui-sref="swift">Swift Projects</div>
       <div class="sub" ui-sref="close out">Close Out</div>
       <div class="sub" ui-sref="management">Management</div>
     </div>
