Disable Pricing in nav

--- a/nav.html
+++ b/nav.html
@@ -5,7 +5,7 @@
     <div class="nav-row no-select">
       <div ui-sref="home" ng-mouseover="hoverMenu('home')">Home</div>
       <div ng-click="toggleIcon()" ng-mouseover="hoverMenu('solutions')">Solutions</div>
-      <div ui-sref="pricing" ng-mouseover="hoverMenu('pricing')">Pricing</div>
+      <!--<div ui-sref="pricing" ng-mouseover="hoverMenu('pricing')">Pricing</div>-->
       <div ui-sref="about" ng-mouseover="hoverMenu('about')">About Us</div>
       <div ui-sref="support" ng-mouseover="hoverMenu('support')">Support</div>
       <div ui-sref="jobs" ng-mouseover="hoverMenu('jobs')">Jobs</div>
