Disable Pricing in nav

--- a/nav.html
+++ b/nav.html
@@ -28,7 +28,7 @@
     <div ui-sref="closeout" class="closeout"><span>Close Out</span></div>
     <!--<div ui-sref="gear" class="gear"><span>Gear</span></div>-->
     <div ui-sref="management" class="mgmt"><span>MGMT</span></div>
-    <div ui-sref="pricing" class="mobile-only">Pricing</div>
+    <!--<div ui-sref="pricing" class="mobile-only">Pricing</div>-->
     <div ui-sref="about" class="mobile-only">About Us</div>
     <div ui-sref="support" class="mobile-only">FAQ</div>
     <div ui-sref="jobs" class="mobile-only">Jobs</div>
