Disable Pricing in views

--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
   <div class="contain">
     <div>
       <div ui-sref="about">About Us</div>
-      <div ui-sref="pricing">Pricing</div>
+      <!--<div ui-sref="pricing">Pricing</div>-->
       <div ui-sref="support">Support</div>
       <div ui-sref="jobs">Jobs</div>
     </div>
